# southasia_mcp

./: .cursorrole  AI_GUIDE.md  README.md  README_NEW.md  Tool_GUIDE.md  new_web_app.py  pyproject.toml  requirements.txt
.cursor/rules/: 000-MDC建立輔助指南.mdc  010-Core-ProjectRenamingGuide.mdc  100-Lang-PythonMCPHandlerGuide.mdc
src/southasia/: fast_server.py  server.py
src/southasia/handlers/: hello_world.py  prompt.py  resource.py  tools.py
src/southasia/models/: note.py
src/southasia/services/: note_service.py
