[project]
name = "southasia"
version = "1.0"
description = "this is a mcp tools for IGS southasia team."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "mcp>=1.5.0",]
[[project.authors]]
name = "pochenkuo"
email = "pochenkuo@igs.com.tw"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
southasia = "southasia:main"
